--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -31,6 +31,7 @@
 }
 
 .form_btn {
+  background-image: url('../../../public/search.svg');
   display: inline-block;
   width: 48px;
   height: 48px;
